7/27/14: New Parser is working wonderfully. Im sub-classing it to parse classes and methods. and Im starting on its referencing logic.